<resources>
    <!-- EntryFragment labels -->
    <string name="app_name_title">Project Control</string>
    <string name="email_label">Электронная почта</string>
    <string name="password_label">Пароль</string>
    <string name="signIn_label">Войти</string>
    <string name="com_reg_title">Новый проект</string>
    <string name="recovery_label">Восстановить доступ</string>

    <!-- ProjRegistrationFragment labels -->
    <string name="proj_reg_fragment_title">Регистрация нового проекта</string>
    <string name="proj_name_label">Наименование проекта</string>
    <string name="proj_description_label">Описание проекта</string>
    <string name="proj_date_start_label">Дата начала:</string>
    <string name="proj_date_end_label">Планируемая дата окончания:</string>
    <string name="date_format">ДД.ММ.ГГГГ</string>
    <string name="next_label">К следущему этапу</string>

    <!-- UserRegistrationFragment labels -->
    <string name="manager_reg_fragment_title">Регистрация владельца проекта</string>
    <string name="employee_reg_title">Регистрация нового сотрудника</string>
    <string name="staff_name_label">Имя</string>
    <string name="staff_surname_label">Фамилия</string>
    <string name="staff_patron_label">Отчество</string>
    <string name="staff_position_label">Должность</string>
    <string name="staff_phone_label">Телефон</string>
    <string name="staff_email_label">Электронная почта</string>
    <string name="staff_password_label">Пароль</string>
    <string name="staff_password_label_d">Подтвердите пароль</string>

    <!-- EmailConfirmationFragment labels-->
    <string name="reg_last_step_title">Завершение регистрации</string>
    <string name="confirmation_label">Подтвердите адрес электронный почты. Мы хотели бы убедиться, что вы указали верный адрес. На указанную почту было отправлено письмо, пожалуйста проверьте почтовый ящик. </string>
    <string name="conf_code_label">Код подтверждения</string>
    <string name="reg_finish">Завершить регистрацию</string>

    <!-- RecoveryFragment labels -->
    <string name="recovery_title">Восстановление учетной записи</string>
    <string name="explain_label">Для восстановления доступа к Вашей учетной записи, пожалуйста, укажите в поле ниже адрес электронной почты, к которому была привязана ваша учетная запись (адрес, который Вы указали при регистрации).</string>

    <!-- Manifest labels -->
    <string name="title_activity_lk_profile">LK_Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer labels -->
    <string name="menu_profile">Профиль</string>
    <string name="menu_staff">Мои сотрудники</string>
    <string name="menu_sent_tasks">Назначенные мной задачи</string>
    <string name="menu_received_tasks">Назначенные мне задачи</string>
    <string name="menu_additional">Дополнительно</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_info">О программе</string>


    <string name="info">Hello blank fragment</string>

    <!-- SettingsFragment labels-->
    <string name="theme_settings">Темы</string>
    <string name="text_settings">Шрифт</string>
    <string name="notif_settings">Уведомления</string>
    <string name="exit">ВЫЙТИ ИЗ АККАУНТА</string>

    <string name="light_theme_theme">Светлая тема</string>
    <string name="dark_theme_label">Темная тема</string>
    <string name="black_white_theme_label">Черно-белая тема</string>

    <string name="small_text">Мелкий</string>
    <string name="normal_text">Средний</string>
    <string name="big_text">Крупный</string>

    <!-- ProfileFragment labels-->
    <string name="profile_proj_name">Название проекта</string>
    <string name="profile_proj_description">Описание</string>
    <string name="profile_proj_start">Дата начала</string>
    <string name="profile_proj_end">Плановая дата завершения</string>
    <string name="profile_proj_days_left">Дней до завершения </string>

    <string name="change_user_data">Изменить данные</string>
    <string name="new_password_label">Новый пароль</string>
    <string name="old_password_require">Введите текущий пароль, чтобы продолжить.</string>

    <string name="hello_blank_fragment">Пустой фрагемент</string>

    <!-- ////////////////////// StaffFragment labels ////////////////////////////// -->
    <string name="new_employee_fragment_title">Добавить нового сотрудника</string>

    <!-- UpdateDataFragment labels-->
    <string name="update_fragment_title">Изменение данных</string>

    <!-- Task CardView and CreationTask Fragmentlabels -->
    <string name="task_creation_title">Назначение новой задачи</string>

    <string name="task_creation_name_hint">Название задачи</string>
    <string name="task_creation_idea_hint">Краткое описание задачи</string>
    <string name="task_creation_deadline_hint">Дата сдачи задачи</string>
    <string name="task_creation_resp_hint">Ответственный за задачу</string>
    <string name="task_creation_btn_label">Создать</string>
    <string name="task_creation_warning_label">Пока некому назначить задачу!</string>

    <string name="card_task_creation_label">Задача создана </string>
    <string name="card_task_deadline_label">Дата сдачи задачи</string>
    <string name="card_task_resp_label">Ответственный</string>
    <string name="card_task_creator_label">Задачу назначил</string>
    <string name="card_task_priority_label">Приоритет задачи</string>
    <string name="card_task_status_label">Статус задачи</string>


</resources>