<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.doctracermobile.presentation.fragment.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_access_edit"
            app:destination="@id/nav_access_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_staff"
        android:name="com.example.doctracermobile.presentation.fragment.staff.StaffFragment"
        android:label="@string/menu_staff"
        tools:layout="@layout/fragment_staff" />

    <fragment
        android:id="@+id/nav_sent"
        android:name="com.example.doctracermobile.presentation.fragment.sent.SentFragment"
        android:label="@string/menu_sent_tasks"
        tools:layout="@layout/fragment_sent" />

    <fragment
        android:id="@+id/nav_received"
        android:name="com.example.doctracermobile.presentation.fragment.received.ReceivedFragment"
        android:label="@string/menu_received_tasks"
        tools:layout="@layout/fragment_received" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.doctracermobile.presentation.fragment.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.doctracermobile.presentation.fragment.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_access_edit"
        android:name="com.example.doctracermobile.presentation.fragment.AccessEditFragment"
        tools:layout="@layout/fragment_access_edit">
        <action
            android:id="@+id/action_nav_access_edit_to_nav_edit_userData"
            app:destination="@id/nav_edit_userData" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_userData"
        android:name="com.example.doctracermobile.presentation.fragment.EditDataFragment"
        tools:layout="@layout/fragment_edit_data" >
        <action
            android:id="@+id/action_nav_edit_userData_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

</navigation>