<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.start.EntryFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <EditText
                android:id="@+id/entry_edit_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress"
                android:maxLength="32"
                android:textColor="@color/purple"
                android:textColorHint="@color/pale_purple" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <EditText
                android:id="@+id/entry_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:inputType="textPassword"
                android:maxLength="32"
                android:textColor="@color/purple"
                android:textColorHint="@color/pale_purple" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/entry_butt_recovery"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="left"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:text="@string/recovery_label"
                android:textAllCaps="false"
                android:textColor="@color/pale_purple" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="90dp"
            android:gravity="center">

            <Button
                android:id="@+id/entry_butt_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_purple"
                android:text="@string/signIn_label"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/entry_butt_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_purple"
                android:paddingHorizontal="@dimen/butt_horizontal_padding"
                android:text="@string/com_reg_title"
                android:textColor="@color/white" />
        </TableRow>

    </TableLayout>

</FrameLayout>