<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".presentation.account.EditDataFragment"
    android:background="@color/white">

    <TableRow
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/change_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/staff_name_label"
            android:inputType="text"
            android:textColor="@color/purple"
            android:textColorHint="@color/pale_purple">
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/change_edit_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/staff_surname_label"
            android:inputType="text"
            android:textColor="@color/purple"
            android:textColorHint="@color/pale_purple">
        </EditText>
    </TableRow>

    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/change_edit_patronum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:textColorHint="@color/pale_purple"
            android:inputType="text"
            android:hint="@string/staff_patron_label">
        </EditText>
    </TableRow>

    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp">
        <EditText
            android:id="@+id/change_edit_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textColorHint="@color/pale_purple"
            android:inputType="text"
            android:enabled="false"
            android:hint="@string/staff_position_label">
        </EditText>
    </TableRow>

    <!-->################################################################</-->
    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/change_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:textColorHint="@color/pale_purple"
            android:inputType="phone"
            android:text="+7">
        </EditText>
    </TableRow>

    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp">
        <EditText
            android:id="@+id/change_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:textColorHint="@color/pale_purple"
            android:inputType="textEmailAddress"
            android:paddingRight="70dp"
            android:hint="@string/staff_email_label">
        </EditText>
    </TableRow>

    <!-->#############################################################</-->
    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/change_edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"
                android:textColorHint="@color/pale_purple"
                android:inputType="textPassword"
                android:hint="@string/staff_password_label">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/change_edit_pass_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"
                android:textColorHint="@color/pale_purple"
                android:inputType="textPassword"
                android:hint="@string/staff_password_label_d">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </TableRow>

    <!-->##############################################################</-->

    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/reg_head_but_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_user_data"
            android:textColor="@color/white"
            android:background="@drawable/oval"
            android:onClick="onClick_update">
        </Button>
    </TableRow>

</TableLayout>