<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".presentation.RecoveryActivity"
    android:background="@color/white">

    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/purple"
            android:text="@string/explain_label">
        </TextView>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp">

        <EditText
            android:id="@+id/rec_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:hint="@string/email_label"
            android:textColorHint="@color/pale_purple"
            android:inputType="textEmailAddress">
        </EditText>
    </TableRow>

    <TableRow
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content">
        <Button
            android:id="@+id/rec_but_recover"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/recovery_label"
            android:background="@drawable/oval"
            android:onClick="onClick_recover_send">
        </Button>
    </TableRow>

</TableLayout>